# FwLLM

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yaml  llm-firewall.service  llm-firewall.yaml
docs/: behavior.md  deepseek_text_20260617_36ea67.txt  live-readiness.md  mvp-behavior.md
packaging/linux/: README.md  install.sh  llm-firewall.env.example  uninstall.sh
scripts/: Dockerfile.mock-upstream  docker-local-down.ps1  docker-local-test.ps1  docker-local-up.ps1  mock_upstream.py  package-release.ps1
src/: config.rs  errors.rs  main.rs
src/detectors/: dlp.rs  injection.rs  mod.rs  output_sanitizer.rs  rate_limiter.rs  system_prompt.rs  token_budget.rs  tool_call.rs
src/pipeline/: context.rs  engine.rs  mod.rs
src/proxy/: handler.rs  mod.rs  upstream.rs
src/utils/: audit.rs  metrics.rs  mod.rs  token_counter.rs
tests/: integration_test.rs
tests/fixtures/: allowed_chat.json  allowed_response.json  dlp_redact_email.json  prompt_injection_block.json  responses_dlp_redact_email.json  responses_prompt_injection_block.json
