[package]
name = "llm-firewall"
version = "0.1.0"
edition = "2021"
description = "Transparent Layer-7 firewall for OpenAI-compatible LLM APIs"
license = "Apache-2.0"

[features]
default = []
ml = []

[dependencies]
actix-web = "4"
aho-corasick = "1"
anyhow = "1"
async-trait = "0.1"
bytes = "1"
dashmap = "6"
futures-util = "0.3"
governor = { version = "0.10", features = ["dashmap"] }
hex = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
actix-rt = "2"
wiremock = "0.6"
